--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "nodemon": "^3.0.2",
     "pg": "^8.11.3",
     "swagger-ui-express": "^5.0.0",
+    "uuid": "^11.0.5",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
