--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "http-status-codes": "^2.3.0",
     "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mysql": "^2.18.1",
     "nodemon": "^3.0.2",
     "pg": "^8.11.3",
